--- a/src/css/style.css
+++ b/src/css/style.css
@@ -123,7 +123,7 @@ body {
     border-bottom-right-radius: 5px;
 }
 
-.descricao .nome-art {
+.descricao .nome-arte {
     text-decoration: none;
     color: #021021;
     font-style: italic;
